--- a/CHANGES.rdoc
+++ b/CHANGES.rdoc
@@ -5,13 +5,19 @@
 
 = TODO
 
-== Models
-- add Factories and Functions for Seed Data
-- write model specs
+== Roster Database
+- build a layout for the private page
+- get nested forms working
+- table sorting/filtering
 
-== Data Export
-- Be able to export & import data
+== Misc
+- get email sending working
+- find out how to send messages to the paging system
 
-== NEXT FEATURES
-- TBD
-
+== URLs: private.bamru.org
+- /                  - main page
+- /roster            - list all users
+- /roster_new        - create user form
+- /roster_edit/:id   - edit user
+- /pager             - pager database
+- /photos            - photo gallery
